[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/menus/MainTitle.gd" type="Script" id=1]
[ext_resource path="res://images/TitleBackground.png" type="Texture" id=2]
[ext_resource path="res://other/long_shot/Long_Shot.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/normal.png" type="Texture" id=4]
[ext_resource path="res://images/pressed.png" type="Texture" id=5]
[ext_resource path="res://images/hover.png" type="Texture" id=6]
[ext_resource path="res://images/disabled.png" type="Texture" id=7]
[ext_resource path="res://scenes/menus/Transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/FadeInOutLocalForecast.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/menus/PauseDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://other/american_captain/American Captain.ttf" type="DynamicFontData" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment(){
	//COLOR = texture(TEXTURE, UV);
	COLOR = vec4(UV, 0.5, 1.0);
	COLOR.z = abs(cos(TIME/3.0));
}

//void vertex(){
//	VERTEX += vec2(cos(TIME)*100.0, sin(TIME)*100.0);
//}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 128
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/ButtonGrid/NewGameButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/ButtonGrid/SettingsButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/ButtonGrid/HighscoresButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/ButtonGrid/Quit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 11 )

[node name="MainTitle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer2"]
material = SubResource( 2 )
margin_right = 1032.0
margin_bottom = 608.0
texture = ExtResource( 2 )

[node name="TitleLetters" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="TitleLetters"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -67.0
margin_right = 325.0
margin_bottom = 67.0

[node name="Label" type="Label" parent="TitleLetters/HBoxContainer"]
margin_right = 49.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "B"

[node name="Label2" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 53.0
margin_right = 102.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "R"

[node name="Label3" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 106.0
margin_right = 133.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "I"

[node name="Label4" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 137.0
margin_right = 186.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "C"

[node name="Label5" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 190.0
margin_right = 239.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "K"

[node name="Label6" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 243.0
margin_right = 270.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = " "

[node name="Label7" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 274.0
margin_right = 323.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "B"

[node name="Label8" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 327.0
margin_right = 376.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "Y"

[node name="Label9" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 380.0
margin_right = 407.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = " "

[node name="Label10" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 411.0
margin_right = 460.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "B"

[node name="Label11" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 464.0
margin_right = 513.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "R"

[node name="Label12" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 517.0
margin_right = 544.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "I"

[node name="Label13" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 548.0
margin_right = 597.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "C"

[node name="Label14" type="Label" parent="TitleLetters/HBoxContainer"]
margin_left = 601.0
margin_right = 650.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "K"

[node name="otherMainTitle" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -67.0
margin_right = 331.5
margin_bottom = 67.0
custom_fonts/font = SubResource( 9 )
text = "BRICK BY BRICK"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 4 )
text = "The quick brown fox jumps over the lazy dog"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Buttons = SubResource( 5 )
anims/Title = SubResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 325.0

[node name="ButtonGrid" type="GridContainer" parent="CenterContainer"]
margin_left = 376.0
margin_top = 66.0
margin_right = 647.0
margin_bottom = 209.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="NewGameButton" type="TextureButton" parent="CenterContainer/ButtonGrid"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 128.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="Label" type="Label" parent="CenterContainer/ButtonGrid/NewGameButton"]
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NEW GAME"
align = 1
valign = 1

[node name="SettingsButton" type="TextureButton" parent="CenterContainer/ButtonGrid"]
modulate = Color( 1, 1, 1, 0.00750571 )
margin_left = 143.0
margin_right = 271.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="Label" type="Label" parent="CenterContainer/ButtonGrid/SettingsButton"]
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SETTINGS"
align = 1
valign = 1

[node name="HighscoresButton" type="TextureButton" parent="CenterContainer/ButtonGrid"]
modulate = Color( 1, 1, 1, 0.00910294 )
margin_top = 79.0
margin_right = 128.0
margin_bottom = 143.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="Label" type="Label" parent="CenterContainer/ButtonGrid/HighscoresButton"]
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HIGHSCORES"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="CenterContainer/ButtonGrid"]
modulate = Color( 1, 1, 1, 0.00910246 )
margin_left = 143.0
margin_top = 79.0
margin_right = 271.0
margin_bottom = 143.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="Label" type="Label" parent="CenterContainer/ButtonGrid/Quit"]
margin_right = 128.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
align = 1
valign = 1

[node name="Transition" parent="." instance=ExtResource( 8 )]
visible = false

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="PauseDialog" parent="Camera2D/CanvasLayer" instance=ExtResource( 10 )]

[node name="Credits" type="Label" parent="."]
margin_left = 13.0
margin_top = 577.0
margin_right = 1010.0
margin_bottom = 591.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music: Local Forecast - Elevator, Killing Time, and Cipher by Kevin MacLeod. Free fonts from DaFont. Rest is by RhetHypo."
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CenterContainer/ButtonGrid/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonGrid/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonGrid/HighscoresButton" to="." method="_on_HighscoresButton_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonGrid/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
